--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,10 +1,11 @@
 .card{
-  height: 500px;
-  width: 250px;
+  height: 700px;
+  width: 300px;
   overflow: hidden;
   border: 1px solid black;
   border-radius: 10px;
-  margin: 20px
+  margin: 20px;
+  padding: 20px;
 }
 
 img{
