--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,10 @@
-.App{
+.App {
   display: grid;
   grid-template-columns: 20% 80%;
 }
-.main{
-  grid-column: 2 / 3;
-}
+// .main{
+//   grid-column: 2 / 3;
+// }
 .SearchResults {
   grid-column: 2 / 3;
-  grid-row: 2/3;
 }
