--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -1,14 +1,13 @@
 .carousel {
   display: flex;
-  justify-content: space-between;
- }
- .arrows{
-   display: flex;
-   justify-content: center;
- }
- .carousel__arrow {
-   height: 25px;
-   width: 25px;
-   margin: 10px;
- }
- 
+  justify-content: space-around;
+}
+.arrows {
+  display: flex;
+  justify-content: center;
+}
+.carousel__arrow {
+  height: 25px;
+  width: 25px;
+  margin: 10px;
+}
