--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,14 +1,15 @@
-.card{
-  height: 700px;
+@use "/src/assets/Styles/variables" as *;
+
+.card {
+  height: 500px;
   width: 300px;
   overflow: hidden;
-  border: 1px solid black;
+  border: 2px dashed black;
   border-radius: 10px;
   margin: 20px;
   padding: 20px;
 }
 
-img{
+img {
   height: 300px;
-  width: 200px;
 }
