--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,8 @@
 .App {
   display: grid;
   grid-template-columns: 15% 80%;
-}
-// .main{
-//   grid-column: 2 / 3;
-// }
-.SearchResults {
-  grid-column: 2 / 3;
+  @media only screen and (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
