--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,4 +2,8 @@
   grid-column: 1 / 2;
   background-color: #5cadff;
   border-radius: 5px;
+  min-height: 80vh;
+  @media only screen and (max-width: 1024px) {
+    min-height: 20vh;
+  }
 }
