--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -1,3 +1,6 @@
+.SearchResults {
+  grid-column: 2 / 3;
+}
 .carousel {
   display: flex;
   justify-content: space-around;
@@ -10,4 +13,9 @@
   height: 25px;
   width: 25px;
   margin: 10px;
+}
+.carousel-extra {
+  @media only screen and(max-width: 1024px) {
+    display: none;
+  }
 }
